@@ -74,6 +74,7 @@ LIBXML_REQUIRED=2.6.12
 LIBXSLT_REQUIRED=1.1.7
 LIBGLADE_REQUIRED=2.3.1
 LIBGNOMEVFS_REQUIRED=2.9.2
+LIBGNOME_REQUIRED=2.10.0
 LIBGNOMEUI_REQUIRED=2.6.0
 GNOME_DESKTOP_REQUIRED=2.9.91
 LIBSTARTUP_NOTIFICATION_REQUIRED=0.5
@@ -87,6 +88,7 @@ PKG_CHECK_MODULES([DEPENDENCIES], [\
 		  gtk+-2.0 >= $GTK_REQUIRED \
 		  libxml-2.0 >= $LIBXML_REQUIRED \
 		  libxslt >= $LIBXSLT_REQUIRED \
+		  libgnome-2.0 >= $LIBGNOME_REQUIRED \
 		  libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED \
 		  libglade-2.0 >= $LIBGLADE_REQUIRED \
 		  gnome-vfs-2.0 >= $LIBGNOMEVFS_REQUIRED \
